--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:js": "parcel watch ./public/JS/index.js --out-dir ./public/JS --out-file bundle.js"
+    "watch:js": "parcel watch ./public/JS/index.js --out-dir ./public/JS --out-file bundle.js",
+    "build:js": "parcel build ./public/JS/index.js --out-dir ./public/JS --out-file bundle.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
