--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start":"node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:js": "parcel watch ./public/JS/index.js --out-dir ./public/JS --out-file bundle.js",
     "build:js": "parcel build ./public/JS/index.js --out-dir ./public/JS --out-file bundle.js"
@@ -34,5 +35,9 @@
   "devDependencies": {
     "nodemailer-sendgrid-transport": "^0.2.0",
     "parcel-bundler": "^1.12.5"
+  },
+  "engines":{
+    "node":">=14.11.0"
   }
+
 }
